--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -3,7 +3,7 @@
     <mat-card-title>Configure your exam session</mat-card-title>
     <mat-card-content>
       {{errorMessage}}
-      <mat-stepper linear="true" #stepper>
+      <mat-stepper linear="true" #stepper (selectionChange)="stepClick($event)">
         <mat-step [stepControl]="firstFormGroup">
           <form [formGroup]="firstFormGroup">
             <ng-template matStepLabel>Select the categories</ng-template>
@@ -36,7 +36,7 @@
             <button mat-button matStepperNext>Next</button>
           </div>
         </mat-step>
-        <mat-step [stepControl]="thirdFormGroup">
+        <mat-step [stepControl]="thirdFormGroup" label="step3">
           <form [formGroup]="thirdFormGroup">
             <ng-template matStepLabel>Define the max number of questions to be asked</ng-template>
             <mat-label>Number of questions</mat-label>
