--- a/src/app/components/feedback/feedback.component.html
+++ b/src/app/components/feedback/feedback.component.html
@@ -1,1 +1,16 @@
-<p>feedback works!</p>
+<ng-container>
+  <mat-card>
+    <mat-card-content>
+      <div class="overline mb-4">{{questionsData[preguntaActual - 1].category}}
+        <small>({{questionsData[preguntaActual - 1].constructor.name}})</small>
+      </div>
+      You answered: {{questionsData[preguntaActual - 1].userAnswer}}
+    </mat-card-content>
+    <mat-card-actions>
+      <mat-paginator [length]="questionsData.length"
+                     [pageSize]="1"
+                     (page)="handleQuestionChange($event)"
+                     aria-label="Select question"></mat-paginator>
+    </mat-card-actions>
+  </mat-card>
+</ng-container>
