--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -8,7 +8,8 @@
           <form [formGroup]="zerothFormGroup">
             <ng-template matStepLabel>Select The question set</ng-template>
             <mat-form-field appearance="fill">
-              <mat-select placeholder="Select question set" multiple formControlName="zerothCtrl">
+              <mat-select placeholder="Select question set" multiple formControlName="zerothCtrl"
+              (selectionChange)="changeDatasets($event.value)">
                 <mat-option *ngFor="let questionSet of questionSet" [value]="questionSet.filename">
                   {{questionSet.displayValue}}
                 </mat-option>
