--- a/src/app/components/quiz/quiz.component.html
+++ b/src/app/components/quiz/quiz.component.html
@@ -14,6 +14,12 @@
                         [value]="choice.value">{{choice.label}}</mat-option>
           </mat-select>
         </div>
+        <div *ngIf="'MultipleAnswerQuestion'===laPreguntaActual.constructor.name">
+          <mat-select (selectionChange)="createItems($event.value)" multiple>
+            <mat-option *ngFor="let choice of currentQuestionOptions"
+                        [value]="choice.value"> <span [textContent]="choice.label"></span></mat-option>
+          </mat-select>
+        </div>
         <mat-form-field appearance="fill" *ngIf="'FillBlankQuestion'===laPreguntaActual.constructor.name">
           <textarea matInput [value]="selectedAnswer?.label"
                     placeholder="Escriba sus respuestas en Órden separadas por espacios"></textarea>
