--- a/src/app/components/resultado/resultado.component.html
+++ b/src/app/components/resultado/resultado.component.html
@@ -14,9 +14,8 @@
   Respondidas {{totalCorrectTrial}} para calificación<br>
   Respondidas {{totalIncorrectTrial}} sin contar para calificación<br>
   <div class="text-center">
-<!--    <v-btn color="primary" @click="goToFeedback(questionsData)">Revisar preguntas fallidas</v-btn>-->
-
-<!--    &nbsp;<router-link to="/">Home page</router-link>-->
+    <button (click)="goToFeedback()">Revisar preguntas fallidas</button>
+    <!--    &nbsp;<router-link to="/">Home page</router-link>-->
   </div>
 
 
