--- a/src/app/components/resultado/resultado.component.html
+++ b/src/app/components/resultado/resultado.component.html
@@ -7,14 +7,15 @@
   Respondidas {{totalIncorrect}} sin contar para calificación<br>
   Hubo {{totalVetted}} preguntas obligatorias.<br>
   Recibió un total de {{vettedScore}} puntos en ellas.<br>
-  Respondidas {{totalCorrectVetted}} para calificación<br>
-  Respondidas {{totalIncorrectVetted}} sin contar para calificación<br>
+  Respondidas {{totalCorrectVetted}} obligatorias para calificación<br>
+  Respondidas {{totalIncorrectVetted}} obligatorias sin contar para calificación<br>
   Hubo {{totalTrial}} preguntas de prueba.<br>
   Recibió un total de {{trialScore}} puntos en ellas.<br>
   Respondidas {{totalCorrectTrial}} para calificación<br>
   Respondidas {{totalIncorrectTrial}} sin contar para calificación<br>
   <div class="text-center">
     <button (click)="goToFeedback()">Revisar preguntas fallidas</button>
+    <!--    TODO liga al home-->
     <!--    &nbsp;<router-link to="/">Home page</router-link>-->
   </div>
 
