--- a/src/app/components/quiz/quiz.component.html
+++ b/src/app/components/quiz/quiz.component.html
@@ -9,19 +9,19 @@
       </mat-list>
       <form [formGroup]="firstFormGroup">
         <div *ngIf="'MultipleChoiceQuestion'===laPreguntaActual.constructor.name">
-          <mat-select (selectionChange)="createItems($event.value)">
+          <mat-select (selectionChange)="createItems($event.value)" [value]="laPreguntaActual.userAnswer">
             <mat-option *ngFor="let choice of currentQuestionOptions"
-                        [value]="choice.value">{{choice.label}}</mat-option>
+                        [value]="choice.value"><span [textContent]="unescape(choice.label)"></span></mat-option>
           </mat-select>
         </div>
         <div *ngIf="'MultipleAnswerQuestion'===laPreguntaActual.constructor.name">
-          <mat-select (selectionChange)="createItems($event.value)" multiple>
+          <mat-select (selectionChange)="createItems($event.value)" multiple [value]="laPreguntaActual.userAnswer">
             <mat-option *ngFor="let choice of currentQuestionOptions"
-                        [value]="choice.value"><span [textContent]="choice.label"></span></mat-option>
+                        [value]="choice.value"><span [textContent]="unescape(choice.label)"></span></mat-option>
           </mat-select>
         </div>
         <mat-form-field appearance="fill" *ngIf="'FillBlankQuestion'===laPreguntaActual.constructor.name">
-          <textarea matInput [value]="selectedAnswer?.label"
+          <textarea matInput [value]="laPreguntaActual.userAnswer"
                     placeholder="Escriba sus respuestas en Órden separadas por espacios"></textarea>
         </mat-form-field>
         <button *ngIf="this.questionsData.length === (this.preguntaActual + 1 || 0)" (click)="goToResults()">Go to
