--- a/src/app/components/quiz/quiz.component.html
+++ b/src/app/components/quiz/quiz.component.html
@@ -2,26 +2,27 @@
   <ng-container>
     <mat-card>
       <mat-list>
-        <div class="overline mb-4">{{laPreguntaActual.category}}
-          <small>({{laPreguntaActual.constructor.name}})</small>
+        <div class="overline mb-4">{{currentQuestionAlv.category}}
+          <small>({{currentQuestionAlv.constructor.name}})</small>
         </div>
-        <div [innerHTML]="laPreguntaActual.display()"></div>
+        <div [innerHTML]="currentQuestionAlv.display()"></div>
       </mat-list>
       <form [formGroup]="firstFormGroup">
-        <div *ngIf="'MultipleChoiceQuestion'===laPreguntaActual.constructor.name">
-          <mat-select formControlName="firstCtrl" (selectionChange)="createItems($event.value)" [(value)]="laPreguntaActual.userAnswer">
+        <div *ngIf="'MultipleChoiceQuestion'===currentQuestionAlv.constructor.name">
+<!--          (selectionChange)="createItems($event)" [(value)]="laPreguntaActual.userAnswer"-->
+          <mat-select formControlName="firstCtrl" (selectionChange)="mulAnswerSelectionChanged($event)">
             <mat-option *ngFor="let choice of currentQuestionOptions"
                         [value]="choice.value"><span [textContent]="unescape(choice.label)"></span></mat-option>
           </mat-select>
         </div>
-        <div *ngIf="'MultipleAnswerQuestion'===laPreguntaActual.constructor.name">
-          <mat-select (selectionChange)="createItems($event.value)" multiple [(value)]="laPreguntaActual.userAnswer">
+        <div *ngIf="'MultipleAnswerQuestion'===currentQuestionAlv.constructor.name">
+          <mat-select (selectionChange)="mulAnswerSelectionChanged($event.value)" multiple [(value)]="currentQuestionAlv.userAnswer">
             <mat-option *ngFor="let choice of currentQuestionOptions"
                         [value]="choice.value"><span [textContent]="unescape(choice.label)"></span></mat-option>
           </mat-select>
         </div>
-        <mat-form-field appearance="fill" *ngIf="'FillBlankQuestion'===laPreguntaActual.constructor.name">
-          <textarea matInput [value]="laPreguntaActual.userAnswer"
+        <mat-form-field appearance="fill" *ngIf="'FillBlankQuestion'===currentQuestionAlv.constructor.name">
+          <textarea matInput [value]="currentQuestionAlv.userAnswer"
                     placeholder="Escriba sus respuestas en Órden separadas por espacios"></textarea>
         </mat-form-field>
         <button *ngIf="this.questionsData.length === (this.preguntaActual + 1 || 0)" (click)="goToResults()">Go to
