added line break for explanation in feedback component

--- a/src/app/components/feedback/feedback.component.html
+++ b/src/app/components/feedback/feedback.component.html
@@ -10,7 +10,7 @@
       </div>
       <br>
       The correct answer was: <span [innerHTML]="showAnswer(laPreguntaActual.answer)"></span>
-      <span *ngIf="laPreguntaActual.explanation">Explanation:<br>{{laPreguntaActual.explanation}}</span>
+      <span *ngIf="laPreguntaActual.explanation"><br>Explanation:<br>{{laPreguntaActual.explanation}}</span>
     </mat-card-content>
     <mat-card-actions>
       <mat-paginator [length]="questionsData.length"
