added question generation page

--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -77,4 +77,9 @@
       </mat-stepper>
     </mat-card-content>
   </mat-card>
+  <mat-card>
+    <mat-card-content>
+      <button (click)="goToEditor()">Generar codigo para pregunta</button>
+    </mat-card-content>
+  </mat-card>
 </ng-container>
