--- a/src/app/components/quiz/quiz.component.html
+++ b/src/app/components/quiz/quiz.component.html
@@ -16,7 +16,7 @@
           </mat-select>
         </div>
         <div *ngIf="'MultipleAnswerQuestion'===currentQuestionAlv.constructor.name">
-          <mat-select (selectionChange)="mulAnswerSelectionChanged($event.value)" multiple [(value)]="currentQuestionAlv.userAnswer">
+          <mat-select (selectionChange)="mulAnswerSelectionChanged($event)" multiple [(value)]="currentQuestionAlv.userAnswer">
             <mat-option *ngFor="let choice of currentQuestionOptions"
                         [value]="choice.value"><span [textContent]="unescape(choice.label)"></span></mat-option>
           </mat-select>
