styling code generation section and some buttons

--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -79,7 +79,7 @@
   </mat-card>
   <mat-card>
     <mat-card-content>
-      <button (click)="goToEditor()">Generar codigo para pregunta</button>
+      <button mat-button (click)="goToEditor()">Generar codigo para pregunta</button>
     </mat-card-content>
   </mat-card>
 </ng-container>
