applied strategy design pattern for parsing question types

--- a/src/app/components/resultado/resultado.component.html
+++ b/src/app/components/resultado/resultado.component.html
@@ -1,23 +1,24 @@
-<div>
-  <h1>Resultados del cuestionario</h1>
-
-  <b>Puntos totales:</b>{{score}}<br>
-  Hubo un total de {{questionsData.length}} preguntas.<br>
-  Respondidas {{totalCorrect}} para calificación<br>
-  Respondidas {{totalIncorrect}} sin contar para calificación<br>
-  Hubo {{totalVetted}} preguntas obligatorias.<br>
-  Recibió un total de {{vettedScore}} puntos en ellas.<br>
-  Respondidas {{totalCorrectVetted}} obligatorias para calificación<br>
-  Respondidas {{totalIncorrectVetted}} obligatorias sin contar para calificación<br>
-  Hubo {{totalTrial}} preguntas de prueba.<br>
-  Recibió un total de {{trialScore}} puntos en ellas.<br>
-  Respondidas {{totalCorrectTrial}} para calificación<br>
-  Respondidas {{totalIncorrectTrial}} sin contar para calificación<br>
-  <div class="text-center">
-    <button (click)="goToFeedback()">Revisar preguntas fallidas</button>
-    <!--    TODO liga al home-->
-    <!--    &nbsp;<router-link to="/">Home page</router-link>-->
-  </div>
-
-
-</div>
+<mat-card>
+  <mat-card-header>
+    <h1>Resultados del cuestionario</h1>
+  </mat-card-header>
+  <mat-card-content>
+    <b>Puntos totales:</b>{{score}}<br>
+    Hubo un total de {{questionsData.length}} preguntas.<br>
+    Respondidas {{totalCorrect}} para calificación<br>
+    Respondidas {{totalIncorrect}} sin contar para calificación<br>
+    Hubo {{totalVetted}} preguntas obligatorias.<br>
+    Recibió un total de {{vettedScore}} puntos en ellas.<br>
+    Respondidas {{totalCorrectVetted}} obligatorias para calificación<br>
+    Respondidas {{totalIncorrectVetted}} obligatorias sin contar para calificación<br>
+    Hubo {{totalTrial}} preguntas de prueba.<br>
+    Recibió un total de {{trialScore}} puntos en ellas.<br>
+    Respondidas {{totalCorrectTrial}} para calificación<br>
+    Respondidas {{totalIncorrectTrial}} sin contar para calificación<br>
+    <div class="text-center">
+      <button mat-button (click)="goToFeedback()">Revisar preguntas fallidas</button>
+      <!--    TODO liga al home-->
+      <!--    &nbsp;<router-link to="/">Home page</router-link>-->
+    </div>
+  </mat-card-content>
+</mat-card>
